<resources>
    <string name="app_name">Inventory App</string>
    <string name="add_item">Add item</string>

    <string name="category_camera">Camera</string>
    <string name="category_phone">Phone</string>
    <string name="category_headphones">Headphones</string>
    <string name="category_computers">Computers</string>
    <string name="category_unknown">Unknown</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <string name="action_edit_menu">Edit Item</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_items">Items</string>

    <string name="call_to_supplier">Call to Supplier</string>


    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Product Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_quantity1">Quantity</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_supplier_name">Supplier Name</string>

    <!-- Text hint for suppler phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_supplier_phone">Supplier Phone</string>

    <!-- Label for overflow menu option that deletes all item data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_items">Delete All Items</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add a Item</string>

    <string name="list_item_name">Product:</string>
    <string name="list_item_price">Price:</string>
    <string name="list_item_quantity">In stock:</string>


    <string name="you_cannot_meet_less">You cannot have less than 0 Product</string>

    <!-- Title for the activity to edit an existing item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <string name="sell_product_failed">Product Out of stock</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding name, \nprice, quantity,
        supplier name \n a supplier number</string>

    <string name="sell_product_button">Sell</string>

    <!-- Toast message in editor when new item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_successful">Item saved</string>

    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <string name="editor_insert_item_not_save">All information must be filled in</string>

    <!-- Toast message in editor when current item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_successful">Item updated</string>

    <!-- Toast message in editor when current item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_failed">Error with updating item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>


    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_item">Category</string>

    <!-- Label for dropdown menu option if the item is phone [CHAR LIMIT=20] -->
    <string name="item_phone">Phone</string>

    <!-- Label for dropdown menu option if the item is camera [CHAR LIMIT=20] -->
    <string name="item_camera">Camera</string>

    <!-- Label for dropdown menu option if the item is headphones [CHAR LIMIT=20] -->
    <string name="item_headphones">Headphones</string>

    <!-- Label for dropdown menu option if the item is computers [CHAR LIMIT=20] -->
    <string name="item_computers">Computers</string>

    <!-- Label for the item's breed if the item is unknown [CHAR LIMIT=20] -->
    <string name="item_unknown">Unknown item</string>
    <string name="title_activity_info">InfoActivity</string>

</resources>
