<?xml version="1.0" encoding="utf-8"?>
<!-- Input fields -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin"
    tools:context=".InfoActivity">

    <!-- Name TextView -->
    <TextView
        android:text="@string/hint_item_name"
        style="@style/InfoStyleName"/>

    <TextView
        android:id="@+id/item_name"
        android:hint="@string/hint_item_name"
        style="@style/InfoStyle" />

    <!-- price TextView -->

    <TextView
        android:text="@string/hint_item_price"
        style="@style/InfoStyleName"/>

    <TextView
        android:id="@+id/item_price"
        android:hint="@string/hint_item_price"
        style="@style/InfoStyle" />

    <!-- quantity TextView and Button -->
    <TextView
        android:text="@string/hint_item_quantity1"
        style="@style/InfoStyleName"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginRight="8dp"
            android:onClick="decrement"
            android:text="-" />


        <TextView
            android:id="@+id/edit_item_quantity"
            style="@style/InfoStyle"
            android:text="2"
            />


        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:onClick="increment"
            android:text="+" />
    </LinearLayout>

    <!-- supplier name TextView -->
    <TextView
        android:text="@string/hint_item_supplier_name"
        style="@style/InfoStyleName"/>

    <TextView
        android:id="@+id/item_supplier_name"
        android:hint="@string/hint_item_supplier_name"
        style="@style/InfoStyle" />

    <TextView
        android:text="@string/hint_item_supplier_phone"
        style="@style/InfoStyle"/>

    <TextView
        android:id="@+id/item_supplier_phone"
        android:hint="@string/hint_item_supplier_phone"
        style="@style/InfoStyle" />

    <!-- supplier phone button to call -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:onClick="callSupplier"
        android:text="@string/call_to_supplier"/>
</LinearLayout>
